# cookiecutter-python

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .envrc  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/scripts/: clean_venv.sh
{{ cookiecutter.project_slug }}/tests/: test_main.py
